--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ html {
     text-decoration: none;
     color: white;
     transition:0.2s;
+    z-index: 9999;
 }
 #md:hover{
     -webkit-transform: translateY(-8px);
